go/sigmgmt/parser/traffic_class/trafficclass_parser.go
// Code generated from TrafficClass.g4 by ANTLR 4.7.1. DO NOT EDIT.

package traffic_class // TrafficClass
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'='", "'=0x'", "'cls='", "'('", "','", "')'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "WHITESPACE", "DIGITS", "HEX_DIGITS", "NET",
	"ANY", "ALL", "NOT", "SRC", "DST", "DSCP", "TOS",
}

var ruleNames = []string{
	"matchSrc", "matchDst", "matchDSCP", "matchTOS", "condCls", "condAny",
	"condAll", "condNot", "condIPv4", "cond", "trafficClass",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TrafficClassParser struct {
	*antlr.BaseParser
}

func NewTrafficClassParser(input antlr.TokenStream) *TrafficClassParser {
	this := new(TrafficClassParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TrafficClass.g4"

	return this
}

// TrafficClassParser tokens.
const (
	TrafficClassParserEOF        = antlr.TokenEOF
	TrafficClassParserT__0       = 1
	TrafficClassParserT__1       = 2
	TrafficClassParserT__2       = 3
	TrafficClassParserT__3       = 4
	TrafficClassParserT__4       = 5
	TrafficClassParserT__5       = 6
	TrafficClassParserWHITESPACE = 7
	TrafficClassParserDIGITS     = 8
	TrafficClassParserHEX_DIGITS = 9
	TrafficClassParserNET        = 10
	TrafficClassParserANY        = 11
	TrafficClassParserALL        = 12
	TrafficClassParserNOT        = 13
	TrafficClassParserSRC        = 14
	TrafficClassParserDST        = 15
	TrafficClassParserDSCP       = 16
	TrafficClassParserTOS        = 17
)

// TrafficClassParser rules.
const (
	TrafficClassParserRULE_matchSrc     = 0
	TrafficClassParserRULE_matchDst     = 1
	TrafficClassParserRULE_matchDSCP    = 2
	TrafficClassParserRULE_matchTOS     = 3
	TrafficClassParserRULE_condCls      = 4
	TrafficClassParserRULE_condAny      = 5
	TrafficClassParserRULE_condAll      = 6
	TrafficClassParserRULE_condNot      = 7
	TrafficClassParserRULE_condIPv4     = 8
	TrafficClassParserRULE_cond         = 9
	TrafficClassParserRULE_trafficClass = 10
)

// IMatchSrcContext is an interface to support dynamic dispatch.
type IMatchSrcContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMatchSrcContext differentiates from other interfaces.
	IsMatchSrcContext()
}

type MatchSrcContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchSrcContext() *MatchSrcContext {
	var p = new(MatchSrcContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_matchSrc
	return p
}

func (*MatchSrcContext) IsMatchSrcContext() {}

func NewMatchSrcContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchSrcContext {
	var p = new(MatchSrcContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_matchSrc

	return p
}

func (s *MatchSrcContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchSrcContext) SRC() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserSRC, 0)
}

func (s *MatchSrcContext) NET() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserNET, 0)
}

func (s *MatchSrcContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MatchSrcContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MatchSrcContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterMatchSrc(s)
	}
}

func (s *MatchSrcContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitMatchSrc(s)
	}
}

func (p *TrafficClassParser) MatchSrc() (localctx IMatchSrcContext) {
	localctx = NewMatchSrcContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TrafficClassParserRULE_matchSrc)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(22)
		p.Match(TrafficClassParserSRC)
	}
	{
		p.SetState(23)
		p.Match(TrafficClassParserT__0)
	}
	{
		p.SetState(24)
		p.Match(TrafficClassParserNET)
	}

	return localctx
}

// IMatchDstContext is an interface to support dynamic dispatch.
type IMatchDstContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMatchDstContext differentiates from other interfaces.
	IsMatchDstContext()
}

type MatchDstContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchDstContext() *MatchDstContext {
	var p = new(MatchDstContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_matchDst
	return p
}

func (*MatchDstContext) IsMatchDstContext() {}

func NewMatchDstContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchDstContext {
	var p = new(MatchDstContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_matchDst

	return p
}

func (s *MatchDstContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchDstContext) DST() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserDST, 0)
}

func (s *MatchDstContext) NET() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserNET, 0)
}

func (s *MatchDstContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MatchDstContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MatchDstContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterMatchDst(s)
	}
}

func (s *MatchDstContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitMatchDst(s)
	}
}

func (p *TrafficClassParser) MatchDst() (localctx IMatchDstContext) {
	localctx = NewMatchDstContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TrafficClassParserRULE_matchDst)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.Match(TrafficClassParserDST)
	}
	{
		p.SetState(27)
		p.Match(TrafficClassParserT__0)
	}
	{
		p.SetState(28)
		p.Match(TrafficClassParserNET)
	}

	return localctx
}

// IMatchDSCPContext is an interface to support dynamic dispatch.
type IMatchDSCPContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMatchDSCPContext differentiates from other interfaces.
	IsMatchDSCPContext()
}

type MatchDSCPContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchDSCPContext() *MatchDSCPContext {
	var p = new(MatchDSCPContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_matchDSCP
	return p
}

func (*MatchDSCPContext) IsMatchDSCPContext() {}

func NewMatchDSCPContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchDSCPContext {
	var p = new(MatchDSCPContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_matchDSCP

	return p
}

func (s *MatchDSCPContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchDSCPContext) DSCP() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserDSCP, 0)
}

func (s *MatchDSCPContext) HEX_DIGITS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserHEX_DIGITS, 0)
}

func (s *MatchDSCPContext) DIGITS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserDIGITS, 0)
}

func (s *MatchDSCPContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MatchDSCPContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MatchDSCPContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterMatchDSCP(s)
	}
}

func (s *MatchDSCPContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitMatchDSCP(s)
	}
}

func (p *TrafficClassParser) MatchDSCP() (localctx IMatchDSCPContext) {
	localctx = NewMatchDSCPContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TrafficClassParserRULE_matchDSCP)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(30)
		p.Match(TrafficClassParserDSCP)
	}
	{
		p.SetState(31)
		p.Match(TrafficClassParserT__1)
	}
	{
		p.SetState(32)
		_la = p.GetTokenStream().LA(1)

		if !(_la == TrafficClassParserDIGITS || _la == TrafficClassParserHEX_DIGITS) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IMatchTOSContext is an interface to support dynamic dispatch.
type IMatchTOSContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMatchTOSContext differentiates from other interfaces.
	IsMatchTOSContext()
}

type MatchTOSContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMatchTOSContext() *MatchTOSContext {
	var p = new(MatchTOSContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_matchTOS
	return p
}

func (*MatchTOSContext) IsMatchTOSContext() {}

func NewMatchTOSContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MatchTOSContext {
	var p = new(MatchTOSContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_matchTOS

	return p
}

func (s *MatchTOSContext) GetParser() antlr.Parser { return s.parser }

func (s *MatchTOSContext) TOS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserTOS, 0)
}

func (s *MatchTOSContext) HEX_DIGITS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserHEX_DIGITS, 0)
}

func (s *MatchTOSContext) DIGITS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserDIGITS, 0)
}

func (s *MatchTOSContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MatchTOSContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MatchTOSContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterMatchTOS(s)
	}
}

func (s *MatchTOSContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitMatchTOS(s)
	}
}

func (p *TrafficClassParser) MatchTOS() (localctx IMatchTOSContext) {
	localctx = NewMatchTOSContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, TrafficClassParserRULE_matchTOS)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.Match(TrafficClassParserTOS)
	}
	{
		p.SetState(35)
		p.Match(TrafficClassParserT__1)
	}
	{
		p.SetState(36)
		_la = p.GetTokenStream().LA(1)

		if !(_la == TrafficClassParserDIGITS || _la == TrafficClassParserHEX_DIGITS) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// ICondClsContext is an interface to support dynamic dispatch.
type ICondClsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCondClsContext differentiates from other interfaces.
	IsCondClsContext()
}

type CondClsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondClsContext() *CondClsContext {
	var p = new(CondClsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_condCls
	return p
}

func (*CondClsContext) IsCondClsContext() {}

func NewCondClsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondClsContext {
	var p = new(CondClsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_condCls

	return p
}

func (s *CondClsContext) GetParser() antlr.Parser { return s.parser }

func (s *CondClsContext) DIGITS() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserDIGITS, 0)
}

func (s *CondClsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondClsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondClsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterCondCls(s)
	}
}

func (s *CondClsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitCondCls(s)
	}
}

func (p *TrafficClassParser) CondCls() (localctx ICondClsContext) {
	localctx = NewCondClsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, TrafficClassParserRULE_condCls)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(TrafficClassParserT__2)
	}
	{
		p.SetState(39)
		p.Match(TrafficClassParserDIGITS)
	}

	return localctx
}

// ICondAnyContext is an interface to support dynamic dispatch.
type ICondAnyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCondAnyContext differentiates from other interfaces.
	IsCondAnyContext()
}

type CondAnyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondAnyContext() *CondAnyContext {
	var p = new(CondAnyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_condAny
	return p
}

func (*CondAnyContext) IsCondAnyContext() {}

func NewCondAnyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondAnyContext {
	var p = new(CondAnyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_condAny

	return p
}

func (s *CondAnyContext) GetParser() antlr.Parser { return s.parser }

func (s *CondAnyContext) ANY() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserANY, 0)
}

func (s *CondAnyContext) AllCond() []ICondContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICondContext)(nil)).Elem())
	var tst = make([]ICondContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICondContext)
		}
	}

	return tst
}

func (s *CondAnyContext) Cond(i int) ICondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICondContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *CondAnyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondAnyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondAnyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterCondAny(s)
	}
}

func (s *CondAnyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitCondAny(s)
	}
}

func (p *TrafficClassParser) CondAny() (localctx ICondAnyContext) {
	localctx = NewCondAnyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, TrafficClassParserRULE_condAny)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.Match(TrafficClassParserANY)
	}
	{
		p.SetState(42)
		p.Match(TrafficClassParserT__3)
	}
	{
		p.SetState(43)
		p.Cond()
	}
	p.SetState(48)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TrafficClassParserT__4 {
		{
			p.SetState(44)
			p.Match(TrafficClassParserT__4)
		}
		{
			p.SetState(45)
			p.Cond()
		}

		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(51)
		p.Match(TrafficClassParserT__5)
	}

	return localctx
}

// ICondAllContext is an interface to support dynamic dispatch.
type ICondAllContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCondAllContext differentiates from other interfaces.
	IsCondAllContext()
}

type CondAllContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondAllContext() *CondAllContext {
	var p = new(CondAllContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_condAll
	return p
}

func (*CondAllContext) IsCondAllContext() {}

func NewCondAllContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondAllContext {
	var p = new(CondAllContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_condAll

	return p
}

func (s *CondAllContext) GetParser() antlr.Parser { return s.parser }

func (s *CondAllContext) ALL() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserALL, 0)
}

func (s *CondAllContext) AllCond() []ICondContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICondContext)(nil)).Elem())
	var tst = make([]ICondContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICondContext)
		}
	}

	return tst
}

func (s *CondAllContext) Cond(i int) ICondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICondContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *CondAllContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondAllContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondAllContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterCondAll(s)
	}
}

func (s *CondAllContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitCondAll(s)
	}
}

func (p *TrafficClassParser) CondAll() (localctx ICondAllContext) {
	localctx = NewCondAllContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, TrafficClassParserRULE_condAll)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Match(TrafficClassParserALL)
	}
	{
		p.SetState(54)
		p.Match(TrafficClassParserT__3)
	}
	{
		p.SetState(55)
		p.Cond()
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == TrafficClassParserT__4 {
		{
			p.SetState(56)
			p.Match(TrafficClassParserT__4)
		}
		{
			p.SetState(57)
			p.Cond()
		}

		p.SetState(62)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(63)
		p.Match(TrafficClassParserT__5)
	}

	return localctx
}

// ICondNotContext is an interface to support dynamic dispatch.
type ICondNotContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCondNotContext differentiates from other interfaces.
	IsCondNotContext()
}

type CondNotContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondNotContext() *CondNotContext {
	var p = new(CondNotContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_condNot
	return p
}

func (*CondNotContext) IsCondNotContext() {}

func NewCondNotContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondNotContext {
	var p = new(CondNotContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_condNot

	return p
}

func (s *CondNotContext) GetParser() antlr.Parser { return s.parser }

func (s *CondNotContext) NOT() antlr.TerminalNode {
	return s.GetToken(TrafficClassParserNOT, 0)
}

func (s *CondNotContext) Cond() ICondContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICondContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICondContext)
}

func (s *CondNotContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondNotContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondNotContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterCondNot(s)
	}
}

func (s *CondNotContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitCondNot(s)
	}
}

func (p *TrafficClassParser) CondNot() (localctx ICondNotContext) {
	localctx = NewCondNotContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, TrafficClassParserRULE_condNot)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)
		p.Match(TrafficClassParserNOT)
	}
	{
		p.SetState(66)
		p.Match(TrafficClassParserT__3)
	}
	{
		p.SetState(67)
		p.Cond()
	}
	{
		p.SetState(68)
		p.Match(TrafficClassParserT__5)
	}

	return localctx
}

// ICondIPv4Context is an interface to support dynamic dispatch.
type ICondIPv4Context interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCondIPv4Context differentiates from other interfaces.
	IsCondIPv4Context()
}

type CondIPv4Context struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCondIPv4Context() *CondIPv4Context {
	var p = new(CondIPv4Context)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TrafficClassParserRULE_condIPv4
	return p
}

func (*CondIPv4Context) IsCondIPv4Context() {}

func NewCondIPv4Context(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CondIPv4Context {
	var p = new(CondIPv4Context)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TrafficClassParserRULE_condIPv4

	return p
}

func (s *CondIPv4Context) GetParser() antlr.Parser { return s.parser }

func (s *CondIPv4Context) MatchSrc() IMatchSrcContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatchSrcContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMatchSrcContext)
}

func (s *CondIPv4Context) MatchDst() IMatchDstContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatchDstContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMatchDstContext)
}

func (s *CondIPv4Context) MatchDSCP() IMatchDSCPContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatchDSCPContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMatchDSCPContext)
}

func (s *CondIPv4Context) MatchTOS() IMatchTOSContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMatchTOSContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMatchTOSContext)
}

func (s *CondIPv4Context) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CondIPv4Context) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CondIPv4Context) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.EnterCondIPv4(s)
	}
}

func (s *CondIPv4Context) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TrafficClassListener); ok {
		listenerT.ExitCondIPv4(s)
	}
}

func (p *TrafficClassParser) CondIPv4() (localctx ICondIPv4Context) {
	localctx = NewCondIPv4Context(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 16, TrafficClassParserRULE_condIPv4)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(74)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case TrafficClassParserSRC:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.MatchSrc()
		}

	case TrafficClassParserDST:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.MatchDst()
		}
